update swap window binding

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -141,8 +141,8 @@ bind -T copy-mode-vi Escape send-keys -X cancel
 bind -T copy-mode-vi H send-keys -X start-of-line
 bind -T copy-mode-vi L send-keys -X end-of-line
 
-bind -n C-S-Left swap-window -t -1
-bind -n C-S-Right swap-window -t +1
+bind-key -n C-S-Left swap-window -t -1\; select-window -t -1
+bind-key -n C-S-Right swap-window -t +1\; select-window -t +1
 
 #set-option -g default-command "reattach-to-user-namespace -l bash" # or bash...
 bind C-y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
